tests/invalid/round_wrong_arg_count/main.py
def run_case() -> None:
    x: int = round(1.0, 2)

if __name__ == "__main__":
    run_case()
